# maxops

./: Dockerfile  LICENSE  README.md  desktop.ini  pyproject.toml  shell.py  tree.ps1
app/: main.py
app/routes/: forms.py  queries.py
app/utils/: helpers.py  sg_test.py
batch/: 7325  README.md  afternoon_workflow.txt  eval.txt  now-.txt  spoof_09March2025.txt
discovery/data-entry-analysis/: daily data spreadsheet analysis.pptx
gui/: __main__.py  gui.py  gui_outfall.py  hourly.py  known.py  local_gui.py  outfall.py
powershell/: curl.ps1  execute_batch.ps1  generate_sample_batch.ps1  manage_exports.ps1  run_webapp.ps1  spoof_hourly.ps1  spoof_hourly2.ps1  start_process.ps1  start_process_alt.ps1  test_api.ps1
shell/: __main__.py  __main__out.py  batch_processor.py  command_registry.py  query.py  shell.py  shell2.py  shell_alt.py  tutorial.py
shell/history/: shell_history.txt
shell/output/: output.txt
static/css/: styles.css
static/js/: hourly.js  script.js
templates/: base.html  daily_form.html  dashboard.html  hourly_form.html  hourly_form_2.html  outfall_daily_form.html  submission_success.html
